primer borrador memoria

--- a/Documentación/LATEX/anexos.tex
+++ b/Documentación/LATEX/anexos.tex
@@ -9,6 +9,12 @@
 \usepackage{microtype}
 \usepackage{placeins}
 
+\usepackage{minted}
+\usepackage{algpseudocode}
+
+\usepackage{dirtree}
+
+
 \usepackage{listings}             % Include the listings-package
 
 \RequirePackage{booktabs}
@@ -352,10 +358,12 @@
 
 
 % Datos de portada
-\title{título del TFG \\Documentación Técnica}
-\author{nombre alumno}
-\tutor{nombre tutor}
+\title{Monitorización sensores IOT}
+\author{Daniel Mellado Hurtado}
+\tutor{Bruno Baruque Zanon}
 \date{\today}
+
+\newcommand{\nombrePrograma}{Monitorizacion\_IOT } %%% cambio de comando
 
 \begin{document}
 
