--- a/Documentación/LATEX/bibliografia.bib
+++ b/Documentación/LATEX/bibliografia.bib
@@ -14,7 +14,38 @@
        note = "[Internet; descargado 30-septiembre-2015]"
 }
 
+@misc{pagina:Oracle_IOT,
+    author = "Oracle",
+    title = "¿Qué es el IoT?",
+    year = "2020",
+    url = "https://www.oracle.com/es/internet-of-things/what-is-iot/"}
+  
+@misc{pagina:Python_documentation,
+    author = "Python",
+    title = "General Python FAQ ¿Que es Python?",
+    year = "2021",
+    url = "https://docs.python.org/3.11/faq/general.html#what-is-python"}
+  
+@misc{pagina:River,
+    author = "River",
+    title = "River",
+    year = "2020",
+    url = "https://riverml.xyz/latest/"}
+  
 
+@misc{pagina:JSON,
+    author = "json.org",
+    title = "Introducción a JSON",
+    year = "2020",
+    url = "https://www.json.org/json-es.html"}
+      
+
+@misc{pagina:IBM_Machine_learning,
+    author = "IBM Cloud Education",
+    title = "Machine Learning",
+    year = "2020",
+    url = "https://www.ibm.com/cloud/learn/machine-learning"}
+    
 @article{bortolot2005,
   title={Estimating forest biomass using small footprint LiDAR data: An individual tree-based approach that incorporates training data},
   author={Bortolot, Zachary J and Wynne, Randolph H},
@@ -40,6 +71,7 @@
     url = "https://kafka.apache.org/27/documentation.html"
 }
 
+ 
 @misc{pagina:kafka,
     author = "Apache Kafka",
     title = "Apache Kafka a distributed streaming plataform",
@@ -134,4 +166,67 @@
       title = "Repositories for APT and YUM",
       year = "2021",
       url = "https://www.elastic.co/guide/en/beats/filebeat/current/setup-repositories.html#_apt"
+}
+
+@misc{pagina:Oracle_Big_data,
+      author = "Oracle España",
+      title = "¿Qué es el big data?",
+      year = "2021",
+      url = "https://www.oracle.com/es/big-data/what-is-big-data/"
+}
+
+@misc{pagina:toward_data_scince,
+      author = "Marco Peixeriro",
+      title = "The Complete Guide to Time Series Analysis and Forecasting",
+      year = "2019",
+      url = "https://towardsdatascience.com/the-complete-guide-to-time-series-analysis-and-forecasting-70d476bfe775"
+}
+
+@misc{pagina:techtarget,
+      author = "Margaret Rouse",
+      title = "Inteligencia artificial o IA",
+      year = "2019",
+      url = "https://searchdatacenter.techtarget.com/es/definicion/Inteligencia-artificial-o-AI"
+}
+
+@misc{pagina:wiki_pandas,
+      author = "Wikipedia",
+      title = "Pandas (software)",
+      year = "2021",
+      url = "https://en.wikipedia.org/wiki/Pandas_(software)"
+}
+
+@misc{pagina:SkySpark,
+      author = "SkyFoundry",
+      title = "SkySpark",
+      year = "2021",
+      url = "https://skyfoundry.com/product"
+}
+
+@misc{pagina:DataDog,
+      author = "Datadog",
+      title = "Datadog: Modern monitoring \& security",
+      year = "2021",
+      url = "https://www.datadoghq.com/"
+}
+
+@misc{pagina:AWS,
+      author = "Amazon",
+      title = "AWS IoT Device Management",
+      year = "2021",
+      url = "https://aws.amazon.com/es/iot-device-management/?nc=sn&loc=2&dn=4"
+}
+
+@misc{pagina:daemons_linux,
+      author = "Arch Linux",
+      title = "Daemons (Español)",
+      year = "2021",
+      url = "https://wiki.archlinux.org/title/Daemons_(Espa%C3%B1ol)"
+}
+
+@misc{pagina:AWS_NoSQL,
+      author = "Amazon",
+      title = "¿Qué es NoSQL?",
+      year = "2021",
+      url = "https://aws.amazon.com/es/nosql/"
 }
