--- a/Documentación/LATEX/memoria.tex
+++ b/Documentación/LATEX/memoria.tex
@@ -14,6 +14,10 @@
 \RequirePackage{xtab}
 \RequirePackage{multirow}
 
+
+\usepackage{minted}
+\usepackage{algpseudocode}
+
 % Links
 \PassOptionsToPackage{hyphens}{url}\usepackage[colorlinks]{hyperref}
 \hypersetup{
@@ -356,12 +360,12 @@
   }
 \makeatother
 
-\newcommand{\nombre}{Nombre del alumno} %%% cambio de comando
+\newcommand{\nombre}{Daniel Mellado Hurtado} %%% cambio de comando
 
 % Datos de portada
-\title{título del TFG}
+\title{Monitorización sensores IOT}
 \author{\nombre}
-\tutor{nombre tutor}
+\tutor{Bruno Baruque Zanon}
 \date{\today}
 
 \begin{document}
@@ -378,11 +382,11 @@
 
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}
 
-\noindent D. nombre tutor, profesor del departamento de nombre departamento, área de nombre área.
+\noindent D. nombre Bruno Baruque Zanon, profesor del departamento de nombre departamento, área de nombre área.
 
 \noindent Expone:
 
-\noindent Que el alumno D. \nombre, con DNI dni, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado título de TFG. 
+\noindent Que el alumno D. \nombre, con DNI 71363864Q, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado título de TFG. 
 
 \noindent Y que dicho trabajo ha sido realizado por el alumno bajo la dirección del que suscribe, en virtud de lo cual se autoriza su presentación y defensa.
 
