--- a/Documentación/LATEX/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/LATEX/tex/2_Objetivos_del_proyecto.tex
@@ -1,6 +1,6 @@
 \capitulo{2}{Objetivos del proyecto}
 
-El objetivo de este proyecto consta de la captación dinámica de diversos datos provenientes de sensores IOT, los datos, cedidos por el cliente se han de tratar y almacenar en una base de datos para poder ser consultados y monitorizados por el usuario en cualquier momento. 
+El objetivo de este proyecto consta de la captación dinámica de diversos datos provenientes de sensores IOT. Los datos, cedidos por el cliente, se han de tratar y almacenar en una base de datos para poder ser consultados y monitorizados por el usuario en cualquier momento. 
 
 Se implementará también un algoritmo de aprendizaje automático que ha de aprender con los datos obtenidos a identificar patrones que puedan llevar a situaciones no deseadas y que esto pueda ayudar al usuario a tomar decisiones con la suficiente antelación.
 
@@ -17,5 +17,6 @@ Se implementará también un algoritmo de aprendizaje automático que ha de apre
 
 \begin{enumerate}
     \item Utilizar un repositorio en github y aplicar conocimientos sobre gestión de proyectos.
-    \item Adentrarme y aprender sobre tratamiento, procesado y gestión de datos mediante tecnologías como Stream Processing Frameworks.
+    \item Adentrarme y aprender sobre tratamiento, procesado y gestión de datos.
+    \item Reforzar mis conocimientos en el campo de la inteligencia artificial.
 \end{enumerate}
