--- a/Documentación/LATEX/tex/6_Trabajos_relacionados.tex
+++ b/Documentación/LATEX/tex/6_Trabajos_relacionados.tex
@@ -1,3 +1,26 @@
+
 \capitulo{6}{Trabajos relacionados}
 
-Este apartado sería parecido a un estado del arte de una tesis o tesina. En un trabajo final grado no parece obligada su presencia, aunque se puede dejar a juicio del tutor el incluir un pequeño resumen comentado de los trabajos y proyectos ya realizados en el campo del proyecto en curso. 
+En este apartado se mostrarán algunas aplicaciones y trabajos similares relacionados con la monitorización, análisis y predicción de datos procedentes de tecnologías del internet de las cosas.
+
+
+\section{Elasticsearch}
+
+Elasticsearch, la herramienta que se utiliza como motor de monitorización y base de datos para nuestro proyecto cuenta con una herramienta que permite realizar predicciones sobre los datos almacenados, sin embargo, esta funcionalidad es de pago.
+
+\section{SkySpark}
+SkySpark es una plataforma de análisis de datos procedentes de dispositivos inteligentes IOT desarrollada por la compañía \textit{SkyFoundry}, este software está diseñado para la identificación de fallos, anomalías y tendencias sobre los datos almacenados. Se encuentra disponible en cualquier plataforma que soporte java, como pueden ser los sistemas operativos de Windows, Linux o macOS. 
+
+Esta plataforma es de pago, aunque consta de una demo gratuita. \cite{pagina:SkySpark} 
+
+
+\section{Datadog IoT Monitoring}
+
+Datadog es una herramienta de monitorización y análisis de tecnologías IOT para aplicaciones en la nube enfocada a empresas. También consta de herramientas de predicción que ayudan al reconocimiento de patrones y seguimiento de tendencias en los datos.
+
+Se encuentra disponible en los sistemas operativos Windows, Linux y Mac, es una herramienta de pago, aunque cuenta de un periodo de prueba durante 14 días sin limitación en el número de sistemas que se desee monitorizar.\cite{pagina:DataDog}
+
+
+\section{AWS IoT Device Management}
+
+AWS permite la conexión de miles de dispositivos IOT a la nube de AWS, facilitando su seguimiento, monitorización y administración de forma remota. Este servicio Esta desarrollado por la compañía Amazon. \cite{pagina:AWS}
