--- a/Documentación/LATEX/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/Documentación/LATEX/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -1,4 +1,25 @@
 \capitulo{7}{Conclusiones y Líneas de trabajo futuras}
 
-Todo proyecto debe incluir las conclusiones que se derivan de su desarrollo. Éstas pueden ser de diferente índole, dependiendo de la tipología del proyecto, pero normalmente van a estar presentes un conjunto de conclusiones relacionadas con los resultados del proyecto y un conjunto de conclusiones técnicas. 
-Además, resulta muy útil realizar un informe crítico indicando cómo se puede mejorar el proyecto, o cómo se puede continuar trabajando en la línea del proyecto realizado. 
+Para concluir, en este último apartado se compartirán las conclusiones a las que se ha llegado tras la realización de este proyecto, así como unas líneas de trabajo futuras que servirán para mejorar el proyecto.
+
+\section{Conclusión}
+
+Tras la finalización del proyecto se entrega un producto totalmente funcional, capaz de monitorizar diversos sensores y lograr realizar predicciones a futuro.
+
+Durante el transcurso del proyecto no solo se han logrado los objetivos generales sino los personales también, el realizar un proyecto cómo este para lo bueno y para lo malo ha sido una experiencia enriquecedora tanto profesionalmente como personalmente.
+
+
+\section{Líneas de trabajo futuras}
+Esta aplicación se podría mejorar con la implementación nuevas funcionalidades así como la mejora de las ya existentes.
+
+A continuación, se listan algunas de ellas:
+\begin{itemize}
+    \item Mover el sistema a un servidor real, de esta manera se podrá captar los datos de los sensores de forma continuada y sin pérdidas.
+    \item Implementar una interfaz de usuario para facilitar la experiencia del usuario. Mediante dicha interfaz se propone la implementación de los siguientes apartados:
+    \begin{itemize}
+        \item Añadir y borrar sensores de manera gráfica.
+        \item Poder crear modelos para los sensores de forma intuitiva.
+    \end{itemize}
+    \item Guardar metadatos de los sensores que se vayan a introducir como pueden ser el nombre del sensor, localización, etc.
+    \item Mejorar los algoritmos de aprendizaje incremental así cómo añadir nuevos modelos.
+\end{itemize}
