--- a/Documentación/LATEX/bibliografiaAnexos.bib
+++ b/Documentación/LATEX/bibliografiaAnexos.bib
@@ -13,3 +13,11 @@
        url = "https://es.wikipedia.org/w/index.php?title=LaTeX&oldid=84209252",
        note = "[Internet; descargado 30-septiembre-2015]"
 }
+
+@misc{pagina:elastic,
+    author = "elastic",
+    title = "Kibana Guide [7.9] Create an index pattern",
+    year = "2020",
+    url = "https://www.elastic.co/guide/en/kibana/7.9/index-patterns.html
+"}
+    
